Implement go-live features: Superwall paywall, tax disclaimers, privacy policy, rating prompt, onboarding polish
- P0-1: Integrate Superwall SDK via SPM with paywall placements (first_calculation_complete,
  scenario_feature_gate, household_feature_gate) and feature gates on Scenarios/Household tabs
- P0-4: Add "Based on 2024 tax rates" disclaimer to reveal step, dashboard, and scenario views
- P1-4: Add in-app privacy policy view accessible from Settings
- P2-1: Add App Store rating prompt after 5th dashboard load via SKStoreReviewController
- P2-2: Add haptic feedback and counting animation on onboarding reveal step
- Upgrade UniFFI 0.25 → 0.28 to resolve RustBuffer struct conflict with Superwall's celFFI
- Rebuild TakeHomeCore.xcframework with uint64_t RustBuffer fields
- Add Go-Live PRD documenting all release requirements

All 191 unit tests pass.

--- a/ios/project.yml
+++ b/ios/project.yml
@@ -9,6 +9,11 @@ options:
   defaultConfig: Release
   disableSynthesizedResourceAccessors: true
 
+packages:
+  SuperwallKit:
+    url: https://github.com/superwall/Superwall-iOS
+    from: "4.0.0"
+
 settings:
   base:
     MARKETING_VERSION: "1.0.0"
@@ -41,16 +46,13 @@ targets:
       - framework: ../bindings/TakeHomeCore.xcframework
         embed: false
         link: true
+      - package: SuperwallKit
     settings:
       base:
         INFOPLIST_FILE: TakeHome/Resources/Info.plist
         PRODUCT_BUNDLE_IDENTIFIER: com.takehome.app
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
-        SWIFT_OBJC_BRIDGING_HEADER: TakeHome/Core/TakeHome-Bridging-Header.h
         GENERATE_INFOPLIST_FILE: "NO"
-        HEADER_SEARCH_PATHS:
-          - $(inherited)
-          - ../bindings/swift
         LIBRARY_SEARCH_PATHS:
           - $(inherited)
           - "../bindings/TakeHomeCore.xcframework/ios-arm64-simulator"
