Add CI/CD pipeline with self-hosted runner for TestFlight builds
- Enable code signing with automatic provisioning (team 67C7724279)
- Add GitHub Actions workflow for TestFlight: test → archive → export → upload
- Add CI workflow for PR validation (build + unit tests)
- Add ExportOptions.plist for App Store Connect distribution
- Self-hosted macOS ARM64 runner registered as 'takehome-mac-builder'

TestFlight upload requires App Store Connect API key secrets:
  ASC_KEY_ID, ASC_ISSUER_ID, ASC_PRIVATE_KEY

Archive build verified locally (ARCHIVE SUCCEEDED, IPA exported).

--- a/ios/project.yml
+++ b/ios/project.yml
@@ -61,14 +61,18 @@ targets:
           - $(inherited)
       configs:
         Debug:
-          CODE_SIGN_IDENTITY: ""
-          CODE_SIGNING_REQUIRED: "NO"
-          CODE_SIGNING_ALLOWED: "NO"
+          CODE_SIGN_IDENTITY: "Apple Development"
+          CODE_SIGNING_REQUIRED: "YES"
+          CODE_SIGNING_ALLOWED: "YES"
+          DEVELOPMENT_TEAM: "67C7724279"
+          CODE_SIGN_STYLE: "Automatic"
           SWIFT_OPTIMIZATION_LEVEL: "-Onone"
         Release:
-          CODE_SIGN_IDENTITY: ""
-          CODE_SIGNING_REQUIRED: "NO"
-          CODE_SIGNING_ALLOWED: "NO"
+          CODE_SIGN_IDENTITY: "Apple Development"
+          CODE_SIGNING_REQUIRED: "YES"
+          CODE_SIGNING_ALLOWED: "YES"
+          DEVELOPMENT_TEAM: "67C7724279"
+          CODE_SIGN_STYLE: "Automatic"
           SWIFT_OPTIMIZATION_LEVEL: "-O"
     preBuildScripts:
       - name: "Copy FFI Bindings"
