--- a/ios/project.yml
+++ b/ios/project.yml
@@ -50,7 +50,7 @@ targets:
     settings:
       base:
         INFOPLIST_FILE: TakeHome/Resources/Info.plist
-        PRODUCT_BUNDLE_IDENTIFIER: com.takehome.app
+        PRODUCT_BUNDLE_IDENTIFIER: com.takehomepay.app
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         GENERATE_INFOPLIST_FILE: "NO"
         LIBRARY_SEARCH_PATHS:
