--- a/ios/TakeHome/Resources/Info.plist
+++ b/ios/TakeHome/Resources/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 </dict>
 </plist>
